testfx/errors/error_tests/edge_37_string_errors.fx
// 字符串错误
x := "unclosed string
y := 'single quote unclosed
z := `template literal`
multi := """
triple quoted string
"""
